--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -113,7 +113,7 @@
                         <div class="tile-body">
                             <div class="row element-button">
                                 <div class="col-sm-2">
-                                    <a class="btn btn-add btn-sm" href="TaoPhieuNhapKho" title="Thêm">
+                                    <a class="btn btn-add btn-sm" href="/PhongKho/TaoPhieuNhapKho" title="Thêm">
                                         <i class="fas fa-plus"></i>
                                         Tạo phiếu đề nghị nhập hàng hóa
                                     </a>
