--- a/Test02/Views/PhieuNhapXuats/Create.cshtml
+++ b/Test02/Views/PhieuNhapXuats/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Test02.Models.PhieuNhapXuat
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
@@ -15,7 +15,13 @@
         <h4>PhieuNhapXuat</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.MaPhieu)
+        <div class="form-group">
+            @Html.LabelFor(model => model.MaPhieu, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.MaPhieu, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MaPhieu, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.MaKho, "MaKho", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,7 +57,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
