--- a/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "ChiTietPhieuNhapKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.hh = "active";
+    ViewBag.nk = "active";
     ViewBag.Name = "Chi tiết phiếu đề nghị nhập kho";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var dsSP = db.SanPhams.ToList();
@@ -96,6 +96,12 @@
                                 }
                             </tbody>
                         </table>
+                        <h5 style="margin-left:82%;" id="sample1">Thủ kho</h5>
+                        <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
+                        <br />
+                        <br />
+                        <br />
+                        <h6 style="margin-left:80%;" id="sample1">Nguyễn Thị Diễm Khang</h6>
                     </div>
                 </form>
             </div>
@@ -104,11 +110,11 @@
 </div>
 
 <p>
-    <a class="btn btn-actv btn-sm" id="btnPrint"  href="/PhongKho/NhapKho" title="Trở lại">
+    <a class="btn btn-actv btn-sm" id="btnReturn"  href="/PhongKho/NhapKho" title="Trở lại">
         <i class="fas fa-retweet"></i>
         Trở lại
     </a>
-    <a class="btn btn-delete btn-sm print-file" id="btnPrint" title="In" onclick="printDiv('printMe')">
+    <a class="btn btn-delete btn-sm print-file" id="btnPrint" href="/PhongKho/NhapKho" title="In" onclick="printDiv('printMe')">
         <i class="fas fa-print"></i> In phiếu
     </a>
 </p>
@@ -116,6 +122,8 @@
 <script>
     //In dữ liệu
     function printDiv(divName) {
+        document.getElementById("btnReturn").style.display = "none";
+        document.getElementById("btnPrint").style.display = "none";
         var printContents = document.getElementById(divName).innerHTML;
         var originalContents = document.body.innerHTML;
 
@@ -124,6 +132,5 @@
         window.print();
 
         document.body.innerHTML = originalContents;
-
     }
 </script>
