--- a/Test02/Views/PhongKho/DeletePNX.cshtml
+++ b/Test02/Views/PhongKho/DeletePNX.cshtml
@@ -5,15 +5,12 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
 }
 
-<h2>DeletePNX</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa vĩnh viễn phiếu @Model.MaPhieu?</h3>
 <div>
-    <h4>PhieuNhapXuat</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NgayLap)
+            Ngày lập:
         </dt>
 
         <dd>
@@ -21,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiPhieu)
+            Loại phiếu:
         </dt>
 
         <dd>
@@ -29,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Kho.TenKho)
+            Kho xuất
         </dt>
 
         <dd>
@@ -37,21 +34,31 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NhanVien.MaChucVu)
+            Mã nhân viên lập:
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.NhanVien.MaChucVu)
         </dd>
 
+        <dt>
+            Mã đơn hàng:
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MaDH)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<div class="form-actions no-color">
+    <input type="submit" value="Vẫn xóa" class="btn btn-danger" /> |
+    <a class="btn btn-actv btn-sm" href="/PhongKho/NhapKho" title="Trở lại">
+        <i class="fas fa-retweet"></i>
+        Trở lại
+    </a>
+</div>
     }
 </div>
