--- a/Test02/Views/KinhDoanh/ThemDL.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDL.cshtml
@@ -89,7 +89,7 @@
 <!--
   MODAL
 -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<div class="model fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
      data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -117,6 +117,7 @@
                         <BR>
                     </div>
                     <div class="modal-footer">
+                    </div>
                     </div>
             </form>
         </div>
