--- a/Test02/Views/PhongKho/CreateBBKK.cshtml
+++ b/Test02/Views/PhongKho/CreateBBKK.cshtml
@@ -19,19 +19,19 @@
     @Html.HiddenFor(model => model.MaKK)
     @Html.HiddenFor(model => model.NgayLap)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.MaNVLap, "MaNVLap", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("MaNVLap", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.MaNVLap, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.MaNVLap, "MaNVLap", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.DropDownList("MaNVLap", null, htmlAttributes: new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.MaNVLap, "", new { @class = "text-danger" })
     </div>
+</div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.MaSP, "MaSP", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.MaKho, "MaKho", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+            @Html.DropDownList("MaKho", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.MaKho, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -43,13 +43,13 @@
         </div>
     </div>*@
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TenBienBang, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TenBienBang, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TenBienBang, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.TenBienBang, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.TenBienBang, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.TenBienBang, "", new { @class = "text-danger" })
     </div>
+</div>
 
     @*<div class="form-group">
         @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label col-md-2" })
