--- a/Test02/Views/PhongKho/CreatePXuat.cshtml
+++ b/Test02/Views/PhongKho/CreatePXuat.cshtml
@@ -8,7 +8,23 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var kho = db.Khoes.ToList();
     var ctdonhang = db.ChiTietDonHangs.ToList();
-    
+
+}
+
+@{
+    var checkMessage = TempData["AlertMessage"];
+
+    if (checkMessage == "khonull")
+    {
+        <script>
+            swal({
+                title: "Bạn chưa chọn kho",
+                text: "Thông tin kho còn để trống!",
+                icon: "warning",
+                button: "Trở lại",
+            });
+        </script>
+    }
 }
 
 <div class="row">
@@ -37,7 +53,7 @@
                         <div class="form-group col-md-12" id="sample5">
                             <label class="control-label" id="ThongTinKho1">Kho xuất hàng:</label><br />
                             <select class="form-control" name="ThongTinKho1">
-                                <option>----chọn_kho----</option>
+                                <option>----chọn kho----</option>
                                 @foreach (var item in kho)
                                 {
                                     <option>@item.MaKho</option>
@@ -50,14 +66,14 @@
                         </div>
                         <div class="form-group col-md-12" id="sample4">
                             <label class="control-label" id="vanchuyen">Phương tiện vận chuyển: </label> <br />
-                            <input class="form-control" type="text"  name="vanchuyen" required>
+                            <input class="form-control" type="text" name="vanchuyen" required>
                         </div>
                         <div class="form-group col-md-12" id="sample4">
-                            <label class="control-label">Đại lý nhận hàng: </label> 
+                            <label class="control-label">Đại lý nhận hàng: </label>
                             @TempData["tenDL"]
                         </div>
                         <div class="form-group col-md-12" id="sample4">
-                            <label class="control-label">Địa chỉ nhận hàng: </label> 
+                            <label class="control-label">Địa chỉ nhận hàng: </label>
                             @TempData["diemgiao"]
                         </div>
                         <div class="form-group col-md-12 table-responsive" id="sample6">
@@ -69,7 +85,7 @@
                                     <tr>
                                         <th>Mã sản phẩm</th>
                                         <th>Tên sản phẩm</th>
-                                        <th >Số lượng</th>
+                                        <th>Số lượng</th>
                                         <th>Đơn giá</th>
                                         <th>Đơn vị tính</th>
                                         <th>Thành tiền</th>
@@ -80,7 +96,7 @@
                                     @{ var madhX = Session["madhxk"];}
                                     @foreach (var item in ctdonhang)
                                     {
-                                        if(item.MaDH == (string)madhX)
+                                        if (item.MaDH == (string)madhX)
                                         {
                                             <tr>
                                                 <td>
@@ -108,7 +124,7 @@
                                                 </td>
                                             </tr>
                                         }
-                                        
+
                                     }
                                     <tr>
                                         <th colspan="5">
@@ -128,7 +144,7 @@
                         <h6 style="margin-left:80%;" id="sample1">Nguyễn Thị Diễm Khang</h6>
                     </form>
                     <div>
-                        <input type="submit" value="Lưu phiếu" class="btn btn-save"/>
+                        <input type="submit" value="Lưu phiếu" class="btn btn-save" />
                         <a class="btn btn-cancel" href="~/PhongKho/ChiTietDonHang/@TempData["mahdx"]">Hủy bỏ</a>
                     </div>
                 </div>
