--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -80,13 +80,13 @@
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Danh sách đơn hoàn</span>
                 </a>
             </li>
-            @*<li>
-                <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
-                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label"></span>
-                </a>
-            </li>*@
             <li>
-                <a class="app-menu__item  @ViewBag.gh_bcldh" href="~/KinhDoanh/BaoCaoPhongGiaoHang">
+                <a class="app-menu__item @ViewBag.gh_nvgh" href="~/GiaoHang/DanhSachShipper">
+                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Nhân viên giao hàng</span>
+                </a>
+            </li>
+            <li>
+                <a class="app-menu__item  @ViewBag.gh_bcldh" href="~/GiaoHang/BaoCaoPhongGiaoHang">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
