--- a/Test02/Views/GiaoHang/DonHangMoi.cshtml
+++ b/Test02/Views/GiaoHang/DonHangMoi.cshtml
@@ -82,7 +82,7 @@
                                                     @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
                                                 </td>
                                                 <td style="text-align:center">
-                                                    <a href="/GiaoHang/DanhSachHD" class="btn btn-primary btn-sm edit">
+                                                    <a href="/GiaoHang/DanhSachGiaoHang" class="btn btn-primary btn-sm edit">
                                                         <i class='bx bxs-check-square'></i>
                                                     </a>
 
