--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -54,7 +54,7 @@
         <hr>
         <ul class="app-menu">
             <li>
-                <a class="app-menu__item haha" href="#">
+                <a class="app-menu__item haha">
                     <i class='app-menu__icon bx bx-cart-alt'></i>
                     <span class="">PHÒNG GIAO HÀNG</span>
                 </a>
@@ -67,26 +67,26 @@
             </li>*@
             <li>
                 <a class="app-menu__item  @ViewBag.gh_donhangmoi" href="~/GiaoHang/DonHangMoi">
-                    <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Đơn hàng mới</span>
+                    <i class='app-menu__icon bx bxs-package'></i> <span class="app-menu__label">Đơn hàng mới</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.gh_dsgh" href="~/GiaoHang/DanhSachGiaoHang">
-                    <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Danh sách giao hàng</span>
+                    <i class='app-menu__icon bx bxs-car'></i><span class="app-menu__label">Danh sách giao hàng</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.gh_dsdh" href="~/GiaoHang/DanhSachDonHoan">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Danh sách đơn hoàn</span>
+                    <i class='app-menu__icon bx bxs-message-square-x'></i> <span class="app-menu__label">Danh sách đơn hoàn</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.gh_nvgh" href="~/GiaoHang/DanhSachShipper">
-                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Nhân viên giao hàng</span>
+                    <i class='app-menu__icon bx bxs-user-account'></i><span class="app-menu__label">Nhân viên giao hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item  @ViewBag.gh_bcldh" href="~/GiaoHang/BaoCaoPhongGiaoHang">
+                <a class="app-menu__item  @ViewBag.gh_bc" href="~/GiaoHang/BaoCaoPhongGiaoHang">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
