--- a/Test02/Views/GiaoHang/DanhSachShipper.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachShipper.cshtml
@@ -1,14 +1,13 @@
 ﻿@model IEnumerable<Test02.Models.NhanVien>
 @using Test02.Models;
 @{
-    ViewBag.Title = "DanhSachShipper";
+    ViewBag.Title = "QLNhanVien";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_nvgh = "active";
+    ViewBag.qtnv = "active";
     ViewBag.nd = "Danh sách nhân viên giao hàng";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
-    List<NhanVien> nvhg = db.NhanViens.ToList();
+    List<ChucVu> cv = db.ChucVus.ToList();
 }
-
 
 <div class="row">
     <div class="col-md-12">
@@ -16,81 +15,77 @@
             <div class="tile-body">
 
                 <div class="row element-button">
-                    @*<div class="col-sm-2">
-                            <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KinhDoanh/ThemDH"><i class="fas fa-file-upload"></i> Thêm mới đơn hàng</a>
-                        </div>*@
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
+                        <a class="btn btn-delete btn-sm nhap-tu-file" href="/QTV/ThemNV"><i class="fas fa-file-upload"></i> Thêm nhân viên mới</a>
                     </div>
-                    @*<div class="col-sm-2">
-                            <a class="btn btn-add btn-sm print-file js-textareacopybtn" type="button" target="_blank" title="Sao chép" href="https://docs.google.com/spreadsheets/d/1pXggMVohTvKevnA4Nm9-EOg5vnuT_eFYZjLzN3fJvOY/edit?usp=sharing"><i class="fas fa-address-book"></i> Tiếp nhận đơn hàng</a>
-                        </div>*@
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KinhDoanh/QuanLyDL"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+                    </div>
+
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
+                    <div class="row">
+
+
+                        <div class="col-md-1">
+                            <div id="sampleTable_filter" class="dataTables_filter">
+                                <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
                                     <tr role="row">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="ID nhân viên: activate to sort column ascending" style="width: 60px; text-align:center">Mã đơn hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 70px; text-align: center ">Ngày lập</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 50px; text-align: center ">Mã đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 120px; text-align: center ">Địa điểm giao hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="SĐT: activate to sort column ascending" style="width: 100px; text-align: center ">Tên nhân viên giao</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 80px; text-align: center ">Tổng tiền</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 25px; text-align: center ">Xét duyệt</th>
-
-                                        @*<th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Chức năng</th>*@
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã nhân viên: activate to sort column ascending" style="width: 50px;">Mã nhân viên</th>
+                                        <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã chức vụ: activate to sort column ascending" style="width: 150px;">Mã chức vụ</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên chức vụ: activate to sort column ascending" style="width: 160px;">Tên chức vụ</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên nhân viên: activate to sort column ascending" style="width: 124px;">Tên nhân viên</th>
+                                        @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="UserName: activate to sort column ascending" style="width: 124px;">UserName</th>*@
+                                        <th width="100" class="sorting" tabindex="0" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Chức năng</th>
                                     </tr>
                                 </thead>
-                                @*<tbody>
+                                <tbody>
+
                                     @foreach (var item in Model)
                                     {
+                                        <tr>
+                                            <td style="width: 150px;">
+                                                @Html.DisplayFor(modelItem => item.MaNV)
+                                            </td>
+                                            <td style="width: 150px;">
+                                                @Html.DisplayFor(modelItem => item.MaChucVu)
+                                            </td>   
+                                            <td>
+                                                @{var tencv = db.ChucVus.Find(item.MaChucVu);
+                                                }
+                                                @Html.DisplayFor(modelItem => tencv.ViTri)
+                                            </td>
+                                            <td style="width: 150px;">
+                                                @Html.DisplayFor(modelItem => item.TenNV)
+                                            </td>
+                                            @*<td style="width: 150px;">
+                                                @Html.DisplayFor(modelItem => item.UserName)
+                                            </td>*@
+                                            <td>
+                                                <a href="/GiaoHang/ChinhsuaShipper/@item.MaNV" class="btn btn-primary btn-sm edit">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                <a href="/GiaoHang/XoaShipper/@item.MaNV" class="btn btn-primary btn-sm deleted">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </a>
 
-                                        if (item.TrangThai == "Đã xét duyệt")
-                                        {
-                                            <tr>
-
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.MaDH)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.NgayLap)
-                                                </td>
-
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.MaDL)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.DiemGiao)
-                                                </td>
-                                                <td>
-                                                    @{var tennv = db.NhanViens.Where(s => s.MaNV == item.MaNVLap).FirstOrDefault();
-
-                                                    }
-                                                    @Html.DisplayFor(modelItem => tennv.TenNV)
-                                                </td>
-
-
-                                                <td>
-                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                                    @Html.DisplayFor(modelItem => ThanhTien)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                                                </td>
-                                                <td style="text-align:center">
-                                                    <a href="/GiaoHang/DanhSachHD" class="btn btn-primary btn-sm edit">
-                                                        <i class='bx bxs-check-square'></i>
-                                                    </a>
-
-                                                </td>
-                                            </tr>
-                                        }
+                                            </td>
+                                        </tr>
                                     }
-                                </tbody>*@
+                                </tbody>
                             </table>
                         </div>
                     </div>
@@ -99,3 +94,15 @@
         </div>
     </div>
 </div>
+<script>
+    //In dữ liệu
+    var myApp = new function () {
+        this.printTable = function () {
+            var tab = document.getElementById('sampleTable');
+            var win = window.open('', '', 'height=800px,width=1200px');
+            win.document.write(tab.outerHTML);
+            win.document.close();
+            win.print();
+        }
+    }
+</script>
