--- a/Test02/Views/KinhDoanh/BaoCao.cshtml
+++ b/Test02/Views/KinhDoanh/BaoCao.cshtml
@@ -6,6 +6,8 @@
     ViewBag.baocao = "active";
     ViewBag.nd = "Báo cáo";
 }
+
+
 <script src="//cdn.ckeditor.com/4.15.0/standard/ckeditor.js"></script>
 <script type="text/javascript" src="~Content/ckeditor.js"></script>
 <script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
@@ -60,6 +62,25 @@
     }
 </script>
 <h2>Báo cáo</h2>
+<div class="row">
+    <div class="col-md-6">
+        <div class="tile">
+            <h3 class="tile-title">DỮ LIỆU HÀNG THÁNG</h3>
+            <div class="embed-responsive embed-responsive-16by9">
+                <canvas class="embed-responsive-item" id="lineChartDemo"></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="tile">
+            <h3 class="tile-title">THỐNG KÊ DOANH SỐ</h3>
+            <div class="embed-responsive embed-responsive-16by9">
+                <canvas class="embed-responsive-item" id="barChartDemo"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="row">
     <div class="col-md-12">
@@ -125,3 +146,39 @@
 <script src="~/Content/js/main.js"></script>
 <script src="~/Content/js/plugins/pace.min.js"></script>
 <script src="~/Content/ckeditor/ckeditor.js"></script>
+@section script{
+    <script src="~/Content/js/chart.js"></script>
+    <script type="text/javascript">
+        var data = {
+            labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6", "Tháng 7", "Tháng 8", "Tháng 9", "Tháng 10", "Tháng 11", "Tháng 12"],
+            datasets: [{
+                label: "Dữ liệu đầu tiên",
+                fillColor: "rgba(255, 255, 255, 0.158)",
+                strokeColor: "black",
+                pointColor: "rgb(220, 64, 59)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "green",
+                data: [100, 59, 90, 51, 56, 100, 40, 60, 78, 53, 33, 81]
+            }//,
+            //{
+            //    label: "Dữ liệu kế tiếp",
+            //    fillColor: "rgba(255, 255, 255, 0.158)",
+            //    strokeColor: "rgb(220, 64, 59)",
+            //    pointColor: "black",
+            //    pointStrokeColor: "#fff",
+            //    pointHighlightFill: "#fff",
+            //    pointHighlightStroke: "green",
+            //    data: [0, 48, 49, 39, 86, 10, 50, 70, 60, 70, 75, 90]
+            //}
+            ]
+        };
+
+
+        var ctxl = $("#lineChartDemo").get(0).getContext("2d");
+        var lineChart = new Chart(ctxl).Line(data);
+
+        var ctxb = $("#barChartDemo").get(0).getContext("2d");
+        var barChart = new Chart(ctxb).Bar(data);
+    </script>
+}
