--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -90,7 +90,7 @@
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
-            
+
         </ul>
     </aside>
     <main class="app-content">
@@ -206,6 +206,6 @@
         }
     </script>
     <script src="~/Content/ckeditor/ckeditor.js"></script>
-
+    @RenderSection("script", false)
 </body>
 </html>
