--- a/Test02/Views/KinhDoanh/ThemDL.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDL.cshtml
@@ -21,75 +21,77 @@
         </script>
     };
 }
-<div class="tile">
-    <h3 class="tile-title">Tạo mới đại lý</h3>
-    <div class="tile-body">
-        <div class="row element-button">
-            <div class="col-sm-2">
-                <a class="btn btn-add btn-sm" data-toggle="modal" data-target="#exampleModalCenter">
-                    <b>
-                        <i class="fas fa-folder-plus"></i> Tạo loại đại lý
-                    </b>
-                </a>
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <h3 class="tile-title">Tạo mới đại lý</h3>
+            <div class="tile-body">
+                <div class="row element-button">
+                    <div class="col-sm-2">
+                        <a class="btn btn-add btn-sm" data-toggle="modal" data-target="#myModal01">
+                            <b>
+                                <i class="fas fa-folder-plus"></i> Tạo loại đại lý
+                            </b>
+                        </a>
+                    </div>
+                </div>
+                <form class="row" action="~/KinhDoanh/ThemDL" method="post">
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.MaLoaiDL, "MaLoaiDL", htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownList("MaLoaiDL", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.MaLoaiDL, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group  col-md-4">
+                        @Html.LabelFor(model => model.TenDL, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.SDT, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group  col-md-4">
+                        @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group col-md-10">
+                        <div class="col-md-offset-2 col-md-5">
+                            <input type="submit" value="Thêm mới đại lý" class="btn btn-save" id="ArlertMessage" />
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+            <div>
+                @Html.ActionLink("Quay lại danh sách đại lý", "QuanLyDL")
             </div>
 
         </div>
-        <form class="row" action="~/KinhDoanh/ThemDL" method="post">
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.MaLoaiDL, "MaLoaiDL", htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("MaLoaiDL", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaLoaiDL, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group  col-md-4">
-                @Html.LabelFor(model => model.TenDL, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.SDT, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group  col-md-4">
-                @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-4">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group col-md-10">
-                <div class="col-md-offset-2 col-md-5">
-                    <input type="submit" value="Thêm mới đại lý" class="btn btn-save" id="ArlertMessage" />
-                </div>
-            </div>
-
-        </form>
-
-    </div>
-    <div>
-        @Html.ActionLink("Quay lại danh sách đại lý", "QuanLyDL")
     </div>
 </div>
 
-<!--
-  MODAL
--->
-<div class="model fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+
+<div class="modal fade" id="myModal01" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
      data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -104,25 +106,23 @@
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Nhập loại đại lý</label>
-                            <input class="form-control text-box single-line" id="TenDaiLy" name="TenDaiLy" type="text"required>
+                            <input class="form-control text-box single-line" id="TenDaiLy" name="TenDaiLy" type="text" required>
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Nhập chiết khấu</label>
                             <input class="form-control" id="ChietKhau" name="ChietKhau" type="text" required>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Thêm mới loại đại lý" class="btn btn-save" />
-                        <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
-                        <BR>
-                    </div>
+
                     <div class="modal-footer">
+                        <div class="form-group">
+                            <input type="submit" value="Thêm mới loại đại lý" class="btn btn-save" />
+                            <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
+                            <BR>
+                        </div>
                     </div>
-                    </div>
+                </div>
             </form>
         </div>
     </div>
 </div>
-<!--
-MODAL
--->
